@@ -3,3 +3,7 @@ Battlehips game with ai and network
 
 MacOS 10.15.1 VM Options:
 --module-path="/Library/Java/JavaVirtualMachines/javafx-sdk-11.0.2/lib/" --add-modules=javafx.controls,javafx.fxml
+
+## Inbetriebnahme
+
+Vm-Option: --module-path /home/josua/Documents/JavaFX/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml -Djdk.gtk.version=2
